--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ select {
     position: relative;
     border: 3px solid #f1f1f1;
     border-radius: 10px;
-    box-sizing: content-box;
+    /* box-sizing: content-box; */
 }
 
 h1 {
