--- a/style.css
+++ b/style.css
@@ -180,3 +180,26 @@ h1 {
 .bloc-h p, .bloc-j p {
   margin: 5px;
 }
+
+/* animation chargement  */
+
+.overlay-icone-chargement {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background:  linear-gradient(to right, #434343 0%, black 100%);
+  transition: opacity 1.1s ease-out;
+  z-index: 1000;
+}
+
+.overlay-icone-chargement img { 
+  width: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.disparition {
+  opacity: 0;
+}
